--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "API desenvolvida no curso explorer da Rocketseat",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   },
   "author": "Carlos Eduardo Longhi",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
